[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Essentials
git2 = "0.13.25"
tungstenite = "0.16.0"
isahc = { version = "1.6", features = ["json"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"

# Utils
anyhow = "1.0.53"
url = "2.1.0"

# Logs
log = "0.4.0"
env_logger = "0.8.4"
