[package]
name = "chicon-runner"
description = "Chicon runner for code scans"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Saluki"]
edition = "2021"
keywords = ["chicon", "runner", "sast", "security"]

[dependencies]

# Essentials
git2 = "0.13.25"
tungstenite = { version = "0.17.0" }
isahc = { version = "1.6", features = ["json"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"

# Utils
anyhow = "1.0.53"
url = "2.1.0"
fs_extra = "1.2"
clap = "3.2"

# Logs
log = "0.4.0"
env_logger = "0.8.4"
