[package]
name = "chicon-runner"
description = "Chicon runner for code scans"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Saluki"]
edition = "2021"
keywords = ["chicon", "runner", "sast", "security"]
repository = "https://github.com/kongbytes/chicon-runner"
rust-version = "1.64.0" 

[dependencies]

# Essentials
git2 = "0.17"
tungstenite = "0.19"
isahc = { version = "1.7", features = ["json"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"

# Utils
anyhow = "1.0"
url = "2.3"
fs_extra = "1.3"
clap = "4.2"

# Logs
log = "0.4"
env_logger = "0.10"
